--- a/index.html
+++ b/index.html
@@ -73,6 +73,63 @@
           />
         </form>
       </section>
+
+      <div class="container">
+        <section class="search-results">
+          <div class="spinner spinner--search spinner--hidden"></div>
+
+          <div class="search-results__top">
+            <p class="count">
+              <span class="count__number u-bold">0</span> results
+            </p>
+
+            <section class="sorting">
+              <i class="fa-solid fa-arrow-down-short-wide sorting__icon"></i>
+              <button
+                class="sorting__button sorting__button--relevant sorting__button--active"
+              >
+                Relevant
+              </button>
+              <button class="sorting__button sorting__button--recent">
+                Recent
+              </button>
+            </section>
+          </div>
+
+          <ul class="job-list job-list--search"></ul>
+
+          <section class="pagination">
+            <button
+              class="pagination__button pagination__button--back pagination__button--hidden"
+            >
+              <i class="fa-solid fa-arrow-left pagination__icon"></i>
+              Page
+              <span class="pagination__number pagination__number--back">1</span>
+            </button>
+            <button class="pagination__button pagination__button--next">
+              Page
+              <span class="pagination__number pagination__number--next">2</span>
+              <i class="fa-solid fa-arrow-right pagination__icon"></i>
+            </button>
+          </section>
+        </section>
+
+        <section class="job-details">
+          <div class="spinner spinner--job-details"></div>
+
+          <div class="job-details__content">
+            <div class="job-details__start-view">
+              <p class="job-details__start-text job-details__start-text--big">
+                What are you looking for?
+              </p>
+              <p class="job-details__start-text job-details__start-text">
+                Start by searching for any technology your ideal job is working
+                with
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
 
     <footer class="footer">
