search functionalty and job details implemented dynamically

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <link rel="stylesheet" href="./src/StyleSheet/style.css" />
 
-    <script src="./src/JavaScript/index.js" defer></script>
+    <script src="./src/JavaScript/index.js" type="module"></script>
 
     <title>rmtDev // Find your remote developer job</title>
   </head>
