--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./src/StyleSheet/style.css" />
+    <link rel="stylesheet" href="./src/StyleSheet/responsive.css" />
 
-    <script src="./src/JavaScript/index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 
     <title>rmtDev // Find your remote developer job</title>
   </head>
