--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./src/StyleSheet/style.css" />
     <link rel="stylesheet" href="./src/StyleSheet/responsive.css" />
 
     <script src="./index.js" type="module"></script>
 
-    <title>rmtDev // Find your remote developer job</title>
+    <title>rmtDev ~ Step into the world of remote work</title>
   </head>
 
   <body class="body">
