bookmarked data stored in Local storage and bookmark functionality has improved

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       type="image/png"
       href="https://bytegrad.com/course-assets/js/2/favicon.png"
     />
-    <!-- Google-fonts cdn -->
+    <!-- Google-font cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +22,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <!-- Custom css link -->
+    <!-- Custom css links -->
     <link rel="stylesheet" href="./src/StyleSheet/style.css" />
     <link rel="stylesheet" href="./src/StyleSheet/responsive.css" />
     <!-- Custom js link -->
@@ -57,6 +57,7 @@
       </div>
     </header>
 
+    <!-- Main -->
     <main class="main">
       <!-- Intro Animation -->
       <section class="intro">
@@ -76,7 +77,6 @@
           />
         </form>
       </section>
-
       <!-- App Container -->
       <div class="container">
         <!-- Job List -->
