--- a/index.html
+++ b/index.html
@@ -28,10 +28,23 @@
     <!-- Custom js link -->
     <script src="./index.js" type="module"></script>
 
-    <title>rmtDev ~ Step into the world of remote work</title>
+    <title>rmtDev | Step into the world of remote work</title>
   </head>
 
   <body class="body">
+    <!-- Website Intro Animation -->
+    <div class="fadeIntro">
+      <img
+        src="https://bytegrad.com/course-assets/js/2/pattern.svg"
+        alt="fadeIntro-pattern"
+        class="fadeIntro__pattern"
+      />
+      <img
+        src="https://bytegrad.com/course-assets/js/2/logo.svg"
+        alt="fadeIntro-logo"
+        class="fadeIntro__logo fade-in"
+      />
+    </div>
     <!-- App Background -->
     <div class="background">
       <img
@@ -59,7 +72,7 @@
 
     <!-- Main -->
     <main class="main">
-      <!-- Intro Animation -->
+      <!-- Container Intro Animation -->
       <section class="intro">
         <h1 class="first-heading">
           Find your <span class="u-bold">remote developer</span> job
