--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <!-- Custom css links -->
-    <link rel="stylesheet" href="./src/StyleSheet/style.css" />
-    <link rel="stylesheet" href="./src/StyleSheet/responsive.css" />
+    <link rel="stylesheet" href="./src/StyleSheet/main.css" />
     <!-- Custom js link -->
     <script src="./index.js" type="module"></script>
 
