7-1 scss pattern has implemented

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       type="image/png"
       href="https://bytegrad.com/course-assets/js/2/favicon.png"
     />
-    <!-- Google-font cdn -->
+    <!-- Google-font css cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,7 +31,7 @@
   </head>
 
   <body class="body">
-    <!-- Website Intro Animation -->
+    <!-- Fade Animation -->
     <div class="fadeIntro">
       <img
         src="https://bytegrad.com/course-assets/js/2/pattern.svg"
@@ -71,7 +71,7 @@
 
     <!-- Main -->
     <main class="main">
-      <!-- Container Intro Animation -->
+      <!-- Intro Animation -->
       <section class="intro">
         <h1 class="first-heading">
           Find your <span class="u-bold">remote developer</span> job
