responsive design has added

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </div>
     </main>
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer" style="display: none;">
       <p class="jobs-available">
         <span class="u-bold">10957</span> total jobs available
       </p>
