responive design has finished

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Header -->
     <header class="header">
       <div class="header__top">
-        <a href="." class="logo">
+        <a href="./index.html" class="logo">
           <img
             src="https://bytegrad.com/course-assets/js/2/logo.svg"
             alt="Logo"
@@ -137,7 +137,7 @@
               <p class="job-details__start-text job-details__start-text--big">
                 What are you looking for?
               </p>
-              <p class="job-details__start-text job-details__start-text">
+              <p class="job-details__start-text">
                 Start by searching for any technology your ideal job is working
                 with
               </p>
